k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playing-application-deployment
  namespace: playing-application
spec:
  replicas: 2
  selector:
    matchLabels:
      component: backend
  template:
    metadata:
      labels:
        component: backend
    spec:
      containers:
        - name: playing-app
          image: brunokarpo/playing
          ports:
            - containerPort: 8080
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              memory: "512Mi"
              cpu: 100m
