k8s/cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: playing-application-cluster-ip
  namespace: playing-application
spec:
  type: ClusterIP
  selector:
    component: backend
  ports:
    - name: app
      port: 8080
      targetPort: 8080
    - name: health
      port: 8081
      targetPort: 8081
