k8s/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: playing-ingress-service
  namespace: playing-application
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: playing-application-cluster-ip
              servicePort: 8080
          - path: /actuator/?(.*)
            backend:
              serviceName: playing-application-cluster-ip
              servicePort: 8081
